--- a/src/backend/vk/window/glfw/CMakeLists.txt
+++ b/src/backend/vk/window/glfw/CMakeLists.txt
@@ -10,4 +10,6 @@ add_library(glfw_vk_window SHARED
         window.cc
 )
 
+set_property(TARGET glfw_vk_window PROPERTY POSITION_INDEPENDENT_CODE ON)
+
 target_link_libraries(glfw_vk_window PUBLIC Vulkan::Vulkan glfw)
