--- a/src/backend/gl/window/sdl/CMakeLists.txt
+++ b/src/backend/gl/window/sdl/CMakeLists.txt
@@ -9,5 +9,7 @@ add_library(sdl_gl_window SHARED
         window.h
 )
 
+set_property(TARGET sdl_gl_window PROPERTY POSITION_INDEPENDENT_CODE ON)
+
 target_include_directories(sdl_gl_window PUBLIC ${SDL2_INCLUDE_DIRS})
 target_link_libraries(sdl_gl_window PUBLIC ${SDL2_LIBRARIES})
