--- a/src/backend/vk/renderer/shader.cc.in
+++ b/src/backend/vk/renderer/shader.cc.in
@@ -48,21 +48,19 @@ ShaderModule::ShaderModule() noexcept : info_() {
 }
 
 ShaderModule::ShaderModule(ShaderModule&& other) noexcept
-  : Dispatchable(std::move(other)), info_(other.info_) {
+  : Base(std::move(other)), info_(other.info_) {
   other.info_ = {};
   other.info_.stage = VK_SHADER_STAGE_FLAG_BITS_MAX_ENUM;
 }
 
-ShaderModule::ShaderModule(VkShaderModule module,
-                           VkDevice logical_device,
-                           const VkAllocationCallbacks* allocator,
+ShaderModule::ShaderModule(DeviceDispatchable<VkShaderModule>&& shader_module,
                            const ShaderInfoBase& info) noexcept
-  : Dispatchable(module, logical_device, vkDestroyShaderModule, allocator), info_(info) {}
+  : Base(std::move(shader_module)), info_(info) {}
 
 
 ShaderModule& ShaderModule::operator=(ShaderModule&& other) noexcept {
   if (this != &other) {
-    static_cast<Dispatchable&>(*this) = static_cast<Dispatchable>(std::move(other));
+    Base::operator=(std::move(other));
     info_ = std::exchange(other.info_, {});
     info_.stage = VK_SHADER_STAGE_FLAG_BITS_MAX_ENUM;
   }
