--- a/src/backend/vk/renderer/shader.cc.in
+++ b/src/backend/vk/renderer/shader.cc.in
@@ -21,50 +21,24 @@ std::vector<uint32_t> CompileToSpv(const shaderc::Compiler& compiler, shaderc_sh
 
 } // namespace
 
-std::vector<ShaderInfo> GetShaders() {
+std::vector<ShaderInfo> Shader::GetInfos() {
   shaderc::Compiler compiler;
   return {
     {
-      VK_SHADER_STAGE_VERTEX_BIT,
-      "main",
+      ShaderDescription{VK_SHADER_STAGE_VERTEX_BIT, "main"},
        CompileToSpv(
          compiler,
          shaderc_vertex_shader,
          R"(@simple.vert@)")
     },
     {
-      VK_SHADER_STAGE_FRAGMENT_BIT,
-      "main",
+      ShaderDescription{VK_SHADER_STAGE_FRAGMENT_BIT, "main"},
       CompileToSpv(
         compiler,
         shaderc_fragment_shader,
         R"(@simple.frag@)")
     }
   };
-}
-
-ShaderModule::ShaderModule() noexcept : info_() {
-    info_.stage = VK_SHADER_STAGE_FLAG_BITS_MAX_ENUM;
-}
-
-ShaderModule::ShaderModule(ShaderModule&& other) noexcept
-  : Base(std::move(other)), info_(other.info_) {
-  other.info_ = {};
-  other.info_.stage = VK_SHADER_STAGE_FLAG_BITS_MAX_ENUM;
-}
-
-ShaderModule::ShaderModule(DeviceDispatchable<VkShaderModule>&& shader_module,
-                           const ShaderInfoBase& info) noexcept
-  : Base(std::move(shader_module)), info_(info) {}
-
-
-ShaderModule& ShaderModule::operator=(ShaderModule&& other) noexcept {
-  if (this != &other) {
-    Base::operator=(std::move(other));
-    info_ = std::exchange(other.info_, {});
-    info_.stage = VK_SHADER_STAGE_FLAG_BITS_MAX_ENUM;
-  }
-  return *this;
 }
 
 } // namespace vk
