--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(engine)
 
 set(CMAKE_CXX_STANDARD 17)
 
-#add_compile_definitions(DEBUG)
+add_compile_definitions(DEBUG)
 
 include(cmake/shaders.cmake)
 
