--- a/src/backend/vk/window/glfw/CMakeLists.txt
+++ b/src/backend/vk/window/glfw/CMakeLists.txt
@@ -12,4 +12,5 @@ add_library(glfw_vk_window SHARED
 
 set_property(TARGET glfw_vk_window PROPERTY POSITION_INDEPENDENT_CODE ON)
 
+target_compile_definitions(glfw_vk_window PRIVATE -DENGINE_SHARED -DENGINE_EXPORT)
 target_link_libraries(glfw_vk_window PUBLIC Vulkan::Vulkan glfw)
