--- a/src/backend/gl/window/glfw/CMakeLists.txt
+++ b/src/backend/gl/window/glfw/CMakeLists.txt
@@ -11,4 +11,5 @@ add_library(glfw_gl_window SHARED
 
 set_property(TARGET glfw_gl_window PROPERTY POSITION_INDEPENDENT_CODE ON)
 
+target_compile_definitions(glfw_gl_window PRIVATE -DENGINE_SHARED -DENGINE_EXPORT)
 target_link_libraries(glfw_gl_window PUBLIC glfw)
